2018-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Do not increase decode bits/pixel
	if compression=2, but use it to increase pixel packet size when
	estimating bytes per line for decode buffer.  Fixes oss-fuzz issue
	7324 "graphicsmagick/coder_WPG_fuzzer: Use-of-uninitialized-value
	in ReadDIBImage".

	* coders/dpx.c (ReadDPXImage): When handling the first element of
	a planar DPX, assure that the other channels are
	initialized. Fixes oss-fuzz 7841 "graphicsmagick/coder_DPX_fuzzer:
	Use-of-uninitialized-value in WriteDPXImage". (Credit to OSS-Fuzz)

	* coders/tim.c (ReadTIMImage): Only 4 and 8 bit TIM requires a
	colormap. For other depths, force reading as DirectClass even if
	the TIM file provides a colormap.  Fixes oss-fuzz 7407
	"graphicsmagick/coder_TIM_fuzzer: Use-of-uninitialized-value in
	SyncImageCallBack". (Credit to OSS-Fuzz)

2018-04-08  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c The unread data contains crap in memory,
	erase current image data. This should mute oss-fuzz 6604.

	* coders/wpg.c - condition "if(y<1) continue;" is redundant
	and could be removed completely.
	Allow logging in MatlabV4 module.

	* coders/svg.c - Do not use C++ syntax in C code - removed.

2018-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (UnpackWPGRaster): Fix uninitialized row 0 when
	row-based RLE is used.  Fixes oss-fuzz 6603
	"graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
	BlendCompositePixel". (Credit to OSS-Fuzz)

	* coders/pcd.c: Fix many issues, including oss-fuzz 6016
	"graphicsmagick/coder_PCD_fuzzer: Heap-double-free in
	MagickRealloc" and oss-fuzz 6108 "graphicsmagick/coder_PCD_fuzzer:
	Unknown signal in AllocateThreadViewDataSet". (Credit to OSS-Fuzz)

2018-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (funcDCM_BitsStored): Limit DICOM significant bits
	to 16.  Otherwise rescale map code blows up.  Fixes oss-fuzz 7435