@@ -38,11 +38,15 @@
 <p>2018-04-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (ReadPICTImage): Copy tile exception info to main
+image and don't composite tile if it has a problem.  Fixes
+oss-fuzz 7169 &quot;graphicsmagick/enhance_fuzzer:
+Use-of-uninitialized-value in EnhanceImage&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/dib.c (ReadDIBImage): Do not increase decode bits/pixel
 if compression=2, but use it to increase pixel packet size when
 estimating bytes per line for decode buffer.  Fixes oss-fuzz issue
 7324 &quot;graphicsmagick/coder_WPG_fuzzer: Use-of-uninitialized-value
-in ReadDIBImage&quot;.</li>
+in ReadDIBImage&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/dpx.c (ReadDPXImage): When handling the first element of
 a planar DPX, assure that the other channels are
 initialized. Fixes oss-fuzz 7841 &quot;graphicsmagick/coder_DPX_fuzzer:
